Added categories endpoint and updated swagger docs
